# psge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Allocator.hpp.7DB6EB678B240CEA.idx  Application.cpp.84054292C550D5E1.idx  Application.h.D9CC4A771A7AB8B9.idx  Clock.cpp.A8FCBA289B5FD3DD.idx  ConfigParser.h.3B2FD1DD0A4E022B.idx  ECSEntity.cpp.61346C071CF36B04.idx  ECSEntity.cpp.F4A521D156391761.idx  ECSEntity.hpp.1E664F96B646F4B4.idx  ECSEntity.hpp.FB96A86ED5FBD066.idx  ECSManager.cpp.BB5F5544F092AD80.idx  ECSManager.cpp.C246A6F9C3E2670C.idx  ECSManager.hpp.0F33FD88966BBE2C.idx  ECSManager.hpp.4E74BCE3302063A1.idx  EntryPoint.h.0F5B83971D2870C8.idx  Event.cpp.919D3F7B2959D32E.idx  Event.hpp.05035AD715BCE7F6.idx  EventSystem.cpp.B55768FF91890617.idx  EventSystem.h.CA31F1CF57210887.idx  EventTypes.h.61E1B19078AEE0B3.idx  EventTypes.h.BFCC4EBC52409BD5.idx  InitDataStructs.h.C274848CA5E913E3.idx  InitDataStructs.h.D8F1F812135259ED.idx  LockFreeQueue.hpp.3519151F16D6F1FD.idx  LogManager.cpp.BDE1FAF1D6F65CE9.idx  Logger.cpp.1C71C6AB657A2E03.idx  Logger.h.90BD9A11A770F226.idx  MemoryManager.cpp.49353398C230BC16.idx  MemoryManager.hpp.446530DBAB9AE717.idx  PoolAllocator.cpp.F39F69FEC15E711B.idx  Queue.h.070CB18028CA22E2.idx  Queue.h.50193F142ED2F4EE.idx  Queue.hpp.03F63C06D6F13D16.idx  Sandbox.cpp.BDA990683788D647.idx  String.cpp.DF060770D4F3F9FD.idx  String.hpp.BFA3CDF1D7627FAD.idx  StringID.cpp.66DC52BE7AF27C2A.idx  StringID.hpp.4F33CB37462C6B6E.idx  VulkanManager.hpp.62DA4D2D774A3129.idx  (+12 more)
Engine/: CMakeLists.txt  PintSizedGameEngineConfig.cmake.in  defines.h  psge.h
Engine/.cache/clangd/index/: Allocator.hpp.7DB6EB678B240CEA.idx  Application.cpp.84054292C550D5E1.idx  Application.h.D9CC4A771A7AB8B9.idx  Clock.h.6929C0F1B4B8D701.idx  Clock.hpp.A05322589B779D42.idx  ConfigParser.h.6FDA05017C8EDBC7.idx  Core.h.FAD10F79192C6B76.idx  Event.h.272C52944DC404D3.idx  Event.hpp.05035AD715BCE7F6.idx  EventSystem.h.ACB450D6EE716683.idx  EventSystem.hpp.5093A9F93C0B2D90.idx  LockFreeQueue.hpp.3519151F16D6F1FD.idx  LogManager.hpp.AEF7BDA3362D1F42.idx  Logger.h.50958060EA8988E7.idx  Logger.hpp.59F6CFE4D88B8616.idx  MemoryManager.cpp.49353398C230BC16.idx  MemoryManager.hpp.446530DBAB9AE717.idx  PoolAllocator.cpp.F39F69FEC15E711B.idx  PoolAllocator.hpp.191B6C6714344397.idx  Queue.h.50193F142ED2F4EE.idx  Window.h.26618EDCFA92F398.idx
Engine/Application/: Application.cpp  Application.h  EntryPoint.h
Engine/Core/: Core.h
Engine/Core/Config/: ConfigParser.h  DefaultConfig.json  InitDataStructs.h
Engine/Core/DataStructures/: LockFreeQueue.hpp  Queue.hpp  Stack.hpp
Engine/Core/EntityComponentSystem/: ECSEntity.cpp  ECSEntity.hpp  ECSManager.cpp  ECSManager.hpp  System.hpp
Engine/Core/Event/: Event.cpp  Event.hpp  EventSystem.cpp  EventSystem.hpp  EventTypes.h
Engine/Core/Inputs/: Inputs.hpp  KeyboardSystem.cpp  KeyboardSystem.hpp
Engine/Core/Logging/: LogManager.hpp  Logger.hpp
Engine/Core/Memory/: Allocator.hpp  MemoryManager.cpp  PoolAllocator.cpp  PoolAllocator.hpp
Engine/Core/PluginSystem/: PluginInterface.hpp  PluginManager.cpp  PluginManager.hpp  PluginRegistry.cpp  PluginRegistry.hpp
Engine/Core/String/: String.cpp  String.hpp  StringID.cpp  StringID.hpp
Engine/Core/Timing/: Clock.cpp  Clock.hpp
Engine/Core/Window/: Window.cpp  Window.h  Window.hpp  WindowGLFW.cpp
Engine/Graphics/: RendererPluginInterface.hpp  VulkanManager.hpp  VulkanRenderer.hpp
Engine/Platform/: PlatformVulkan.hpp
Engine/assets/: DefaultConfig.json
Engine/assets/shaders/: BuiltIn.ObjectShader.frag  BuiltIn.ObjectShader.vert  simple_shader.frag  simple_shader.vert
Engine/include/: defines.h
Engine/include/Application/: Application.h  EntryPoint.h
Engine/include/Core/: Core.h
Engine/include/Core/Assets/: Mesh.hpp
Engine/include/Core/Camera/: Camera.hpp
Engine/include/Core/Config/: ConfigParser.h  InitDataStructs.h
Engine/include/Core/DataStructures/: LockFreeQueue.hpp
Engine/include/Core/EntityComponentSystem/: ECSEntity.hpp  ECSManager.hpp
Engine/include/Core/Event/: Event.hpp  EventSystem.hpp
Engine/include/Core/Inputs/: KeyboardSystem.hpp
Engine/include/Core/Logging/: LogManager.hpp  Logger.hpp
Engine/include/Core/Memory/: MemoryManager.hpp
Engine/include/Core/PluginSystem/: AbstractFactory.hpp  IPlugin.hpp  PluginInterface.hpp  PluginManager.hpp
Engine/include/Core/String/: String.hpp
Engine/include/Core/Threads/: Task.hpp  TaskManager.hpp  ThreadWorker.hpp
Engine/include/Core/Timing/: Clock.hpp
Engine/include/Core/Window/: Window.hpp
Engine/include/Graphics/: FrameInfo.hpp  Graphics.h  Renderer.hpp  RendererPluginInterface.hpp  VulkanBuffer.hpp  VulkanDevice.hpp  VulkanRenderPass.hpp  VulkanRenderer.hpp  VulkanSwapchain.hpp
Engine/include/Graphics/Vulkan/: RenderPipelineBase.hpp
Engine/include/Platform/: PlatformFileManager.hpp  PlatformKeyboard.hpp  PlatformLinux.hpp  PlatformVulkan.hpp  PlatformWindow.hpp
Engine/sources/Application/: Application.cpp
Engine/sources/Core/Camera/: Camera.cpp
Engine/sources/Core/EntityComponentSystem/: ECSManager.cpp
Engine/sources/Core/Event/: EventSystem.cpp
Engine/sources/Core/Inputs/: KeyboardSystem.cpp
Engine/sources/Core/Logging/: LogManager.cpp  Logger.cpp
Engine/sources/Core/PluginSystem/: AbstractFactory.cpp  PluginManager.cpp
Engine/sources/Core/String/: String.cpp  StringID.cpp
Engine/sources/Core/Threads/: Task.cpp  TaskManager.cpp  ThreadWorker.cpp
Engine/sources/Core/Timing/: Clock.cpp
Engine/sources/Core/Window/: WindowGLFW.cpp
Engine/sources/Graphics/: RendererPluginInterface.cpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp
Engine/sources/Graphics/Vulkan/: RenderPipelineBase.cpp
Game/: CMakeLists.txt
Game/Sources/: Sandbox.cpp
Plugins/: CMakeLists.txt
Plugins/RendererTestPlugin/: CMakeLists.txt  RendererTestPlugin.cpp  RendererTestPlugin.hpp
UnitTests/: .CMakeLists.txt.swp  CMakeLists.txt
UnitTests/Core/: event.cpp  logger.cpp  memorymanager.cpp  queue.cpp  stringtests.cpp  timing.cpp
